2007-11-06  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.27.9, a bugfix release
	on branch_0_27

2007-11-01  Dave Morrison  <drm@finkproject.org>

	* fink.conf.5.in: backport SelfUpdateCVSTrees -> SelfUpdateTrees change
	* postinstall.pl.in: if /sw/fink/10.5 exists but isn't a symlink, 
	remove it
	* VERSION: Bumped package manager version to 0.27.8, a bugfix release
	on branch_0_27

2007-10-24  Dave Morrison  <drm@finkproject.org>

	* postinstall.pl.in: better documentation, and cp -> cp -f; only try
	to create the 10.5 symlink once
	* bootstrap: backports: FSF address, don't disable rsync, use
	SelfUpdateTrees not SelfUpdateCVSTrees
	* fink.info.in: include Distribution
	* VERSION: Bumped package manager version to 0.27.7, a release
	on branch_0_27 ready for 10.5

2007-10-23  Dave Morrison  <drm@finkproject.org>

	* REVISION: 10.5 gets its own revision
	* MANIFEST, install.sh: handle new update packages
	* postinstall.pl.in: overhaul the update process

2007-07-19  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.27.6, a bugfix 
	release on branch_0_27

2007-07-18  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.27.5, a bugfix 
	release on branch_0_27

2007-07-10  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.27.4, a 
	release on branch_0_27 which recognizes 10.4.10

2007-06-14  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.27.3, a bugfix 
	release on branch_0_27

2007-06-09  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.27.2, a release
	on branch_0_27 which implements conditional syntax in the ConfFiles 
	and Shlibs fields, and fixes a few bugs.

2007-03-19  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.27.1, a bugfix 
	release on branch_0_27
