@@ -2,7 +2,7 @@
 #
 # Shell script for preparing the user's shell startup scripts for Fink.
 # Copyright (c) 2003-2005 Martin Costabel
-# Copyright (c) 2003-2007 The Fink Package Manager Team
+# Copyright (c) 2003-2008 The Fink Package Manager Team
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
